Added remember me flag in login, added fully functional profile

--- a/src/main/resources/static/assets/css/styles.css
+++ b/src/main/resources/static/assets/css/styles.css
@@ -43,13 +43,13 @@ header h1 {
 }
 
 .header-logo img {
-    width: 40px; /* Размер логотипа */
+    width: 40px;
     height: auto;
 }
 
 header nav {
     display: flex;
-    gap: 15px; /* Увеличивает расстояние между ссылками */
+    gap: 15px;
 }
 
 header nav a {
@@ -64,15 +64,15 @@ header nav a:hover {
 }
 
 .login-button {
-    background-color: #89939E; /* Цвет кнопки соответствует цвету лого */
-    color: #FFFFFF; /* Белый цвет текста */
-    border: 1px solid #636365; /* Граница в более темном цвете */
+    background-color: #89939E;
+    color: #FFFFFF;
+    border: 1px solid #636365;
     border-radius: 5px;
     padding: 10px 20px;
     text-align: center;
     font-size: 1em;
     cursor: pointer;
-    text-decoration: none; /* Убирает подчеркивание */
+    text-decoration: none;
 }
 
 .login-button:hover {
@@ -89,13 +89,13 @@ section {
 
 .section {
 
-    transform: translateY(20px); /* Начальная позиция */
-    transition: opacity 0.6s ease-out, transform 0.6s ease-out; /* Плавное появление и перемещение */
+    transform: translateY(20px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
 .section.visible {
-    opacity: 1; /* Показать элемент */
-    transform: translateY(0); /* Сместить элемент на его место */
+    opacity: 1;
+    transform: translateY(0);
 }
 
 
@@ -121,9 +121,19 @@ section .h2-left {
     text-align: left;
 }
 
+.profile-section,
+.trainer-section,
+.additional-info-section {
+    background-color: #1f1f1f;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 .hero {
     background: url('/assets/images/hero-bg.png') no-repeat center center;
-    background-size: cover; /* Заполнение фонового изображения */
+    background-size: cover;
     color: #fff;
     padding: 100px 20px;
     text-align: center;
@@ -151,11 +161,13 @@ section .h2-left {
 .cta-button {
     background-color: #89939E;
     color: #fff;
+    border: 1px solid #636365;
     padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
     font-size: 1em;
 }
+
 
 .cta-button:hover {
     background-color: #636365;
@@ -170,7 +182,7 @@ section .h2-left {
 
 #about .text-content {
     flex: 1;
-    margin-right: 20px; /* Отступ между текстом и логотипом */
+    margin-right: 20px;
 }
 
 #about .text-content h2, #about .text-content h3, #about .text-content p {
@@ -178,7 +190,7 @@ section .h2-left {
 }
 
 #about .logo {
-    flex: 0 0 300px; /* Ширина логотипа */
+    flex: 0 0 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -282,13 +294,28 @@ section .h2-left {
     background-color: #636365;
 }
 
+.back-button {
+    background-color: #89939E;
+    color: #FFFFFF;
+    border: 1px solid #89939E;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+}
 
+.back-button:hover {
+    background-color: #636365;
+}
 
 
 #features {
     padding: 60px 20px;
     border-bottom: 1px solid #333;
-    background-color: #1f1f1f; /* Фон секции */
+    background-color: #1f1f1f;
 }
 
 
@@ -299,9 +326,9 @@ section .h2-left {
 
 .feature-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 колонки одинаковой ширины */
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    margin-top: 20px; /* Отступ сверху, если нужно */
+    margin-top: 20px;
 }
 
 
@@ -313,14 +340,14 @@ section .h2-left {
     border-radius: 10px;
     padding: 20px;
     text-align: center;
-    text-decoration: none; /* Убирает подчеркивание у ссылок */
-    color: #fff; /* Цвет текста */
-    transition: transform 0.3s, box-shadow 0.3s; /* Плавные изменения при наведении */
+    text-decoration: none;
+    color: #fff;
+    transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .feature-item:hover {
-    transform: scale(1.05); /* Увеличивает элемент при наведении */
-    box-shadow: 0 4px 8px #89939E; /* Добавляет тень при наведении */
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px #89939E;
 }
 
 .feature-item h3 {
@@ -334,8 +361,15 @@ section .h2-left {
     line-height: 1.5;
 }
 
+.profile-section, .trainer-section, .additional-info-section {
+    margin-bottom: 20px;
+}
 
-/* Анимация для секции Features */
+.profile-section h3, .trainer-section h3, .additional-info-section h3 {
+    margin-bottom: 10px;
+}
+
+
 .feature-item {
     opacity: 0;
     transform: translateY(20px);
@@ -346,6 +380,24 @@ section .h2-left {
     opacity: 1;
     transform: translateY(0);
 }
+
+.logout button {
+    background-color: #89939E;
+    color: #FFFFFF;
+    border: 1px solid #636365;
+    border-radius: 5px;
+    padding: 10px 20px;
+    text-align: center;
+    font-size: 1em;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.logout button:hover {
+    background-color: #636365;
+    border-color: #89939E;
+}
+
 
 .form {
     max-width: 600px;
@@ -420,11 +472,55 @@ section .h2-left {
 }
 
 .form button:hover {
-    background-color: #636365; /* Темнее оттенок при наведении */
+    background-color: #636365;
     border-color: #89939E;
 }
 
+.checkbox-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
 
+.checkbox-container input[type="checkbox"] {
+    display: none; /* Скрыть стандартный чекбокс */
+}
+
+.checkbox-container label {
+    position: relative;
+    padding-left: 30px;
+    cursor: pointer;
+    font-size: 16px;
+    line-height: 24px;
+    display: inline-block;
+}
+
+.checkbox-container label::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #636365;
+    border-radius: 4px;
+    background-color: #ffffff;
+}
+
+.checkbox-container input[type="checkbox"]:checked + label::before {
+    background-color: #636365;
+    border-color: #636365;
+
+}
+
+.checkbox-container input[type="checkbox"]:checked + label::after {
+    content: "✔";
+    position: absolute;
+    left: 5px;
+
+    font-size: 18px;
+
+}
 
 .form-footer {
     display: flex;
@@ -476,7 +572,12 @@ section .h2-left {
     font-weight: bold;
 }
 
-
+.profile-trainer-img{
+    width: 250px;
+    height: 250px;
+    border-bottom: 1px solid #333;
+    border-radius: 10px;
+}
 
 .password-toggle {
     cursor: pointer;
@@ -513,7 +614,7 @@ footer .container {
 
 .footer-right {
     display: flex;
-    gap: 30px; /* Увеличивает расстояние между ссылками в футере */
+    gap: 30px;
 }
 
 .footer-right ul {
