--- a/src/main/resources/templates/add-new-client.html
+++ b/src/main/resources/templates/add-new-client.html
@@ -12,6 +12,7 @@
 <section id="register">
     <div class="container">
         <h2 class="site-h2">Add new Client</h2>
+        <button onclick="history.back()" class="back-button">Go Back</button>
         <div class="messages">
             <ul>
                 <li th:each="error : ${#fields.errors('newClient.*')}" class="error" th:text="${error}"></li>
@@ -25,10 +26,8 @@
             <input type="text" th:field="*{lastName}" id="lastName" name="lastName">
 
             <label for="phoneNum">Phone Number:</label>
-            <div class="phone-wrapper">
-                <span class="phone-prefix">+380</span>
-                <input type="text" th:field="*{phoneNum}" id="phoneNum" name="phoneNum" maxlength="9">
-            </div>
+            <input type="text" th:field="*{phoneNum}" id="phoneNum" name="phoneNum" maxlength="10" placeholder="050 123 45 67">
+
 
             <label for="idCard">Gym ID Card:</label>
             <input type="text" th:field="*{cardNumber}" id="idCard" name="idCard">
@@ -51,15 +50,6 @@
 </section>
 
 <div th:replace="~{footer :: footer}">...</div>
-
-<script>
-    document.querySelector('form').addEventListener('submit', function() {
-        const phoneInput = document.getElementById('phoneNum');
-        if (phoneInput.value && !phoneInput.value.startsWith('380')) {
-            phoneInput.value = '380' + phoneInput.value;
-        }
-    });
-</script>
 
 </body>
 </html>
