--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -18,7 +18,9 @@
 
             <a th:href="@{/feedback}">Contact Us</a>
 
-            <a th:href="@{/profile}" sec:authorize="isAuthenticated()" >Profile</a>
+            <a th:href="@{/profile}" sec:authorize="hasRole('ROLE_CLIENT')" >Profile</a>
+
+            <a th:href="@{/operator/dashboard}" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OPERATOR')" >Dashboard</a>
 
             <a th:href="@{/login}" class="login-button"
                sec:authorize="isAnonymous()">Login</a>
@@ -26,8 +28,10 @@
             <a th:href="@{/register}" class="login-button"
                sec:authorize="isAnonymous()">Register</a>
 
-            <a th:href="@{/logout}" class="login-button"
-               sec:authorize="isAuthenticated()">Logout</a>
+            <form class="logout" sec:authorize="isAuthenticated()" th:action="@{/logout}" method="post">
+                <button type="submit">Logout</button>
+            </form>
+
         </nav>
     </div>
 </header>
