--- a/src/main/resources/templates/add-new-client.html
+++ b/src/main/resources/templates/add-new-client.html
@@ -12,7 +12,7 @@
 <section id="register">
     <div class="container">
         <h2 class="site-h2">Add new Client</h2>
-        <button onclick="history.back()" class="back-button">Go Back</button>
+        <a th:href="@{dashboard}" class="back-button">Go Back</a>
         <div class="messages">
             <ul>
                 <li th:each="error : ${#fields.errors('newClient.*')}" class="error" th:text="${error}"></li>
