Working online shop, only protein category

--- a/src/main/resources/templates/features.html
+++ b/src/main/resources/templates/features.html
@@ -12,7 +12,7 @@
 
 <section id="features">
     <div class="container">
-        <h2 class="site-h2">Features</h2>
+        <h2>Features</h2>
         <div class="feature-grid">
             <a href="#" class="feature-item">
                 <h3>ID-Card Registration</h3>
