--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="feature-grid">
-            <a href="#" class="feature-item">
+            <a th:href="@{shop/categories}" class="feature-item">
                 <h3>Nutrition Shop</h3>
             </a>
             <a href="#" class="feature-item">
