--- a/src/main/resources/static/assets/css/styles.css
+++ b/src/main/resources/static/assets/css/styles.css
@@ -1,3 +1,6 @@
+@import "header-styles.css";
+@import "footer-styles.css";
+
 @font-face {
     font-family: 'AbyssinicaSIL';
     src: url('/assets/fonts/AbyssinicaSIL.ttf') format('truetype');
@@ -10,58 +13,7 @@ body {
     background-color: #121212;
 }
 
-header {
-    background-color: #1f1f1f;
-    padding: 10px 0;
-    border-bottom: 1px solid #333;
-}
 
-header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-}
-
-header h1 {
-    margin: 0;
-    font-size: 1.5em;
-}
-
-.header-logo {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-}
-
-.header-logo h1 {
-    font-family: 'AbyssinicaSIL', sans-serif;
-    font-size: 1.5em;
-    font-weight: 300;
-    color: #fff;
-    margin: 0 5px 0 0;
-}
-
-.header-logo img {
-    width: 40px;
-    height: auto;
-}
-
-header nav {
-    display: flex;
-    gap: 15px;
-}
-
-header nav a {
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 15px;
-}
-
-header nav a:hover {
-    background-color: #333;
-    border-radius: 5px;
-}
 
 .login-button {
     background-color: #89939E;
@@ -381,22 +333,7 @@ section .h2-left {
     transform: translateY(0);
 }
 
-.logout button {
-    background-color: #89939E;
-    color: #FFFFFF;
-    border: 1px solid #636365;
-    border-radius: 5px;
-    padding: 10px 20px;
-    text-align: center;
-    font-size: 1em;
-    cursor: pointer;
-    text-decoration: none;
-}
 
-.logout button:hover {
-    background-color: #636365;
-    border-color: #89939E;
-}
 
 
 .form {
@@ -699,48 +636,4 @@ th {
     height: 369px;
 }
 
-footer {
-    background-color: #1f1f1f;
-    padding: 20px 0;
-    border-top: 1px solid #333;
-}
 
-footer .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-}
-
-.footer-right {
-    display: flex;
-    gap: 30px;
-}
-
-.footer-right ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-}
-
-.footer-right ul li {
-    margin: 0 10px
-}
-
-.footer-right ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.footer-right ul li a:hover {
-    text-decoration: underline;
-}
-
-.footer-left {
-    text-align: left;
-}
-
-.footer-left p {
-    margin: 5px 0;
-}
