--- a/src/main/resources/templates/categories-shop-pages/vitamins.html
+++ b/src/main/resources/templates/categories-shop-pages/vitamins.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Proteins - YourGym</title>
+    <title>Vitamins - YourGym</title>
     <link rel="stylesheet" th:href="@{/assets/css/shop-styles.css}">
 </head>
 <body>
@@ -11,7 +11,7 @@
 
 
     <div class="filter-sidebar">
-        <form th:action="@{/shop/proteins}" th:method="get">
+        <form th:action="@{/shop/vitamins}" th:method="get">
             <div class="price-filter">
                 <p>Price Range:</p>
                 <label for="minPrice">Min:</label>
@@ -31,60 +31,19 @@
             </div>
 
             <div class="checkbox-filter">
-                <p>Forms</p>
-                <div th:each="form : ${forms}">
-                    <label>
-                        <input type="checkbox" name="form" th:value="${form}" th:text="${form.makePretty()}">
-                    </label>
-                </div>
-            </div>
-
-            <div class="checkbox-filter">
-                <p>Protein Contents</p>
-                <div th:each="content : ${proteinContents}">
-                    <label>
-                        <input type="checkbox" name="proteinContent" th:value="${content.getPercentage()}" th:text="${content.makePretty()}">
-                    </label>
-                </div>
-            </div>
-
-            <div class="checkbox-filter">
-                <p>Flavors</p>
-                <div th:each="flavor : ${flavors}">
-                    <label>
-                        <input type="checkbox" name="flavor" th:value="${flavor}" th:text="${flavor.makePretty()}">
-                    </label>
-                </div>
-            </div>
-
-            <div class="checkbox-filter">
                 <p>Pack Size</p>
                 <div th:each="servingSize : ${servingSizes}">
                     <label>
-                        <input type="checkbox" name="servingSize" th:value="${servingSize.getGrams()}" th:text="${servingSize.makePretty()}">
+                        <input type="checkbox" name="servingSize" th:value="${servingSize.getGrams()}" th:text="${servingSize.getDescription()}">
                     </label>
                 </div>
             </div>
 
             <div class="checkbox-filter">
-                <p>Sugar Content</p>
-                <div th:each="content : ${sugarContent}">
+                <p>Caffeine Contents</p>
+                <div th:each="content : ${vitaminContent}">
                     <label>
-                        <input type="checkbox" name="sugarContent" th:value="${content.getPercentage()}" th:text="${content.makePretty()}">
-                    </label>
-                </div>
-            </div>
-
-            <div class="checkbox-filter">
-                <p>Vegan Product</p>
-                <div>
-                    <label for="vegan">
-                        <input type="checkbox" id="vegan" name="isVegan" value="true">
-                        Vegan
-                    </label>
-                    <label for="not-vegan">
-                        <input type="checkbox" id="not-vegan" name="isVegan" value="false">
-                        Not Vegan
+                        <input type="checkbox" name="caffeineContent" th:value="${content.getPercentage()}" th:text="${content.getDescription()}">
                     </label>
                 </div>
             </div>
@@ -96,7 +55,7 @@
     <div class="central-block">
         <div class="upper-central-block">
             <p th:text="${'Found ' + totalProducts + ' results'}"></p>
-            <form th:action="@{proteins}" th:method="get" >
+            <form th:action="@{vitamins}" th:method="get" >
                 <div class="sort-dropdown">
                     <label for="sort">Sort by:</label>
                     <select id="sort" name="sort" th:onchange="this.form.submit()">
@@ -112,23 +71,24 @@
         <div class="product-list">
             <div th:each="product : ${products}">
                 <div class="product-item">
-                    <img th:src="@{${product.imageUrl}}" alt="Product Image">
-                    <h2 th:text="${product.productName}">Product Name</h2>
+                    <img th:src="@{${product.smallImageUrl}}" alt="Product Image">
+                    <h3 th:text="${product.productName}">Product Name</h3>
                     <p th:text="${product.price} + ' UAH'">Price</p>
+                    <button class="buy-button" th:onclick="|window.location.href='@{/product/{id}(id=${product.productId})}'|" >Buy</button>
                 </div>
             </div>
         </div>
 
-        <!-- Пагинация -->
+
         <div class="pagination-container">
             <nav>
                 <ul class="pagination">
-                    <!-- Кнопка "Влево" -->
+
                     <li class="page-item">
                         <button th:disabled="${currentPage <= 1}"
                                 th:classappend="${currentPage > 1 ? '' : 'disabled'}"
                                 th:aria-disabled="${currentPage > 1 ? 'false' : 'true'}"
-                                th:onclick="|window.location.href='@{/shop/proteins(pageNum=${currentPage - 1}, size=${size}, sort=${sort})}'|">
+                                th:onclick="|window.location.href='@{/shop/vitamins(pageNum=${currentPage - 1}, size=${size}, sort=${sort})}'|">
                             &lt;
                         </button>
                     </li>
@@ -137,18 +97,17 @@
                         class="page-item">
                         <button th:disabled="${pageNum == currentPage}"
                                 th:classappend="${pageNum == currentPage ? 'disabled' : ''}"
-                                th:onclick="|window.location.href='@{/shop/proteins(pageNum=${pageNum}, size=${size}, sort=${sort})}'|"
+                                th:onclick="|window.location.href='@{/shop/vitamins(pageNum=${pageNum}, size=${size}, sort=${sort})}'|"
                                 th:aria-disabled="${pageNum == currentPage ? 'true' : 'false'}"
                                 th:text="${pageNum}">
                         </button>
                     </li>
 
-                    <!-- Кнопка "Вправо" -->
                     <li class="page-item">
                         <button th:disabled="${currentPage >= totalPages}"
                                 th:classappend="${currentPage < totalPages ? '' : 'disabled'}"
                                 th:aria-disabled="${currentPage < totalPages ? 'false' : 'true'}"
-                                th:onclick="|window.location.href='@{/shop/proteins(pageNum=${currentPage + 1}, size=${size}, sort=${sort})}'|">
+                                th:onclick="|window.location.href='@{/shop/vitamins(pageNum=${currentPage + 1}, size=${size}, sort=${sort})}'|">
                             &gt;
                         </button>
                     </li>
@@ -157,7 +116,7 @@
         </div>
 
 
-        <form th:action="@{proteins}" th:method="get" >
+        <form th:action="@{vitamins}" th:method="get" >
             <div class="items-per-page">
                 <label for="size">Items per page:</label>
                 <select id="size" name="size" th:onchange="this.form.submit()">
@@ -170,6 +129,5 @@
     </div>
 </div>
 <div th:replace="~{footer :: footer}">...</div>
-
 </body>
 </html>
